# t1-ocr-hack

./: .gitattributes  README.md  compose.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.tsx  axios.ts  main.tsx
frontend/src/components/: BottomButton.tsx  Box.tsx  Card.tsx  Flex.tsx  buttons.tsx  typogaphy.tsx
frontend/src/components/board/: Board.tsx  Column.tsx
frontend/src/components/board/store/: BoardStore.ts
frontend/src/config/: navConfig.ts  routesConfig.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/routes/auth/: store.ts  types.ts
frontend/src/routes/document/: index.tsx  instanceName.ts
frontend/src/static/: theme.ts
frontend/src/static/styles/: globals.css  reset.css
frontend/src/types/: agent.ts  contract.ts  product.ts
ocr/: .dockerignore  Dockerfile  main.py  prestart.sh  pyproject.toml  requirements.txt
ocr/app/: main.py  recognition.py
ocr/benchmark/: annotations.py  benchmark.py  matching.py  metrics.py
ocr/common/: detect_signatures_methods.py  handwritten_text_classification.py  sentence_splitter.py
ocr/common/signature_model/: best.pt
ocr/models/: linknet_trocr_version.py  mock_version.py  surya_version.py  trocr_version.py
ocr/models/linknet_models/: config.py  inference_demo.py  linefinder.py  pipeline_config.json  predictor.py  utils.py
ocr/models/linknet_models/segm/: config.py  models.py  predictor.py  segm_model.ckpt  segm_model.onnx
ocr/models/recognition_models/: tr_ocr_recognition.py
(+12 files in other folders)
