[tool.poetry]
name = "t1hackaton"
version = "0.1.0"
description = ""
authors = ["arkadiy <arkadiy@everypixel.com>"]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
fastapi = "^0.115.3"
surya-ocr = "^0.6.10"
matplotlib = "^3.9.2"
uvicorn = "^0.32.0"
python-multipart = "^0.0.12"
shapely = "^2.0.6"
pyclipper = "^1.3.0.post6"
scikit-learn = "^1.5.2"
albumentations = "^1.4.20"
pytesseract = "^0.3.13"
ultralytics = "^8.3.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
